fix(deployment-filter): prevent text overflow
Related to CAM-4884

--- a/webapps/client/styles/pages/repository.less
+++ b/webapps/client/styles/pages/repository.less
@@ -105,6 +105,9 @@
         padding-bottom: (@grid-gutter-width / 2);
         overflow: visible;
       }
+      [cam-widget-search-pill] .search-label {
+        max-width: 100%;
+      }
     }
 
     &.resources {
